out
In file included from test.cpp:8:
In file included from ./set.hpp:15:
./utility.hpp:198:33: error: no matching constructor for initialization of 'ft::pair<ft::RBIterator<const int, std::__1::less<int>, ft::Node<int> >, ft::RBIterator<const int, std::__1::less<int>, ft::Node<int> > >::first_type' (aka 'ft::RBIterator<const int, std::__1::less<int>, ft::Node<int> >')
                pair(const pair<U1, U2>& p) : first(p.first), second(p.second) {}
                                              ^     ~~~~~~~
test.cpp:731:80: note: in instantiation of function template specialization 'ft::pair<ft::RBIterator<const int, std::__1::less<int>, ft::Node<int> >, ft::RBIterator<const int, std::__1::less<int>, ft::Node<int> > >::pair<ft::RBIterator<int, std::__1::less<int>, ft::Node<int> >, ft::RBIterator<int, std::__1::less<int>, ft::Node<int> > >' requested here
    const _pair<_set<int>::const_iterator , _set<int>::const_iterator>& pair = st.equal_range(10);
                                                                               ^
test.cpp:746:68: note: in instantiation of function template specialization 'equal_range_test<int>' requested here
    exit(run_set_unit_test<int>("equal_range()", equal_range_test, equal_range_test));
                                                                   ^
./iterator.hpp:265:8: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'const RBIterator<int, [2 * ...]>' to 'const RBIterator<const int, [2 * ...]>' for 1st argument
        class RBIterator
              ^
./iterator.hpp:288:4: note: candidate constructor not viable: no known conversion from 'const ft::pair<ft::RBIterator<int, std::__1::less<int>, ft::Node<int> >, ft::RBIterator<int, std::__1::less<int>, ft::Node<int> > >::first_type' (aka 'const ft::RBIterator<int, std::__1::less<int>, ft::Node<int> >') to 'ft::Node<int> *' for 1st argument
                        RBIterator(NodeType* start) : 
                        ^
./iterator.hpp:305:4: note: candidate template ignored: couldn't infer template argument 'T2'
                        RBIterator(RBIterator const & src) :
                        ^
./iterator.hpp:282:4: note: candidate constructor not viable: requires 0 arguments, but 1 was provided
                        RBIterator()
                        ^
./iterator.hpp:296:4: note: candidate constructor not viable: requires 2 arguments, but 1 was provided
                        RBIterator(NodeType* start, NodeType* endPtr) :
                        ^
In file included from test.cpp:8:
In file included from ./set.hpp:15:
./utility.hpp:198:49: error: no matching constructor for initialization of 'ft::pair<ft::RBIterator<const int, std::__1::less<int>, ft::Node<int> >, ft::RBIterator<const int, std::__1::less<int>, ft::Node<int> > >::second_type' (aka 'ft::RBIterator<const int, std::__1::less<int>, ft::Node<int> >')
                pair(const pair<U1, U2>& p) : first(p.first), second(p.second) {}
                                                              ^      ~~~~~~~~
./iterator.hpp:265:8: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'const RBIterator<int, [2 * ...]>' to 'const RBIterator<const int, [2 * ...]>' for 1st argument
        class RBIterator
              ^
./iterator.hpp:288:4: note: candidate constructor not viable: no known conversion from 'const ft::pair<ft::RBIterator<int, std::__1::less<int>, ft::Node<int> >, ft::RBIterator<int, std::__1::less<int>, ft::Node<int> > >::second_type' (aka 'const ft::RBIterator<int, std::__1::less<int>, ft::Node<int> >') to 'ft::Node<int> *' for 1st argument
                        RBIterator(NodeType* start) : 
                        ^
./iterator.hpp:305:4: note: candidate template ignored: couldn't infer template argument 'T2'
                        RBIterator(RBIterator const & src) :
                        ^
./iterator.hpp:282:4: note: candidate constructor not viable: requires 0 arguments, but 1 was provided
                        RBIterator()
                        ^
./iterator.hpp:296:4: note: candidate constructor not viable: requires 2 arguments, but 1 was provided
                        RBIterator(NodeType* start, NodeType* endPtr) :
                        ^
2 errors generated.
